--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -6,20 +6,29 @@ authors = ["Your Name"]
 license = "MIT"
 repository = "https://github.com/FahadBinHussain/PermaVid"
 edition = "2021"
+rust-version = "1.70"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5", features = [] }
+tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = ["fs-all", "dialog-all", "http-all", "shell-open"] }
-serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-rusqlite = { version = "0.29.0", features = ["bundled"] }
-tokio = { version = "1.36.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+tauri = { version = "1.5.4", features = ["dialog-all", "fs-all", "http-all", "shell-open"] }
+rusqlite = { version = "0.30.0", features = ["bundled"] }
+uuid = { version = "1.6.1", features = ["v4", "serde"] }
+chrono = { version = "0.4.31", features = ["serde"] }
+dirs = "5.0.1"
 
 [features]
-# this feature is used for production builds or when `devPath` points to the filesystem
-# DO NOT REMOVE!!
-custom-protocol = ["tauri/custom-protocol"] 
+# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
+custom-protocol = ["tauri/custom-protocol"]
+
+[profile.release]
+panic = "abort" # Strip expensive panic clean-up logic
+codegen-units = 1 # Compile crates one after another so the compiler can optimize better
+lto = true # Enables link to optimizations
+opt-level = "s" # Optimize for binary size
+strip = true # Remove debug symbols 
