feat(dependencies): add Tauri API and CLI dependencies, update various package versions for improved compatibility and performance

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "concurrently \"npm:dev:next\" \"npm:dev:electron\"",
     "dev:electron": "wait-on http://localhost:3000 && tsc electron/main.ts electron/preload.ts --outDir electron/dist --module commonjs --target es2018 --esModuleInterop && electron .",
     "dev:tauri": "tauri dev",
-    "build:next": "set ESLINT_SKIP_DEV_OVERLAY=true && next build",
+    "build:next": "set ESLINT_SKIP_DEV_OVERLAY=true && next build --no-lint",
     "build:electron": "tsc electron/main.ts electron/preload.ts --outDir electron/dist --module commonjs --target es2018 --esModuleInterop",
     "build": "npm run build:next && npm run build:electron",
     "build:tauri": "tauri build",
