--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.4", features = ["dialog-all", "fs-all", "http-all", "shell-open"] }
+tauri = { version = "1.5.4", features = ["dialog-all", "fs-all", "http-all", "shell-open", "devtools"] }
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 uuid = { version = "1.6.1", features = ["v4", "serde"] }
 chrono = { version = "0.4.31", features = ["serde"] }
