chore(package): add Prisma generate configuration to skip generation in package.json for improved build process

--- a/permavid-index-server/package.json
+++ b/permavid-index-server/package.json
@@ -18,5 +18,10 @@
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prisma": "^6.7.0"
+  },
+  "prisma": {
+    "generate": {
+      "skip": true
+    }
   }
 }
