chore(vercel): update vercel.json to include additional files for deployment and remove outputDirectory for better configuration

--- a/permavid-index-server/vercel.json
+++ b/permavid-index-server/vercel.json
@@ -1,16 +1,9 @@
 {
   "version": 2,
   "buildCommand": "npm run build",
-  "outputDirectory": "public",
   "functions": {
     "api/index.js": {
-      "includeFiles": "prisma/**"
+      "includeFiles": ["prisma/**", "generated/**", ".env"]
     }
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.js"
-    }
-  ]
+  }
 } 
