chore(vercel): simplify vercel.json by removing included files for api/index.js

--- a/permavid-index-server/vercel.json
+++ b/permavid-index-server/vercel.json
@@ -2,8 +2,6 @@
   "version": 2,
   "buildCommand": "npm run build",
   "functions": {
-    "api/index.js": {
-      "includeFiles": ["prisma/**", "generated/**", ".env"]
-    }
+    "api/index.js": {}
   }
 } 
