--- a/permavid-index-server/vercel.json
+++ b/permavid-index-server/vercel.json
@@ -1,7 +1,4 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "functions": {
-    "api/index.js": {}
-  }
-} 
+  "buildCommand": "npm run build"
+}
