--- a/permavid-index-server/package.json
+++ b/permavid-index-server/package.json
@@ -4,7 +4,7 @@
   "main": "api/index.js",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "build": "npx prisma generate",
+    "build": "prisma generate",
     "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
