--- a/permavid-index-server/vercel.json
+++ b/permavid-index-server/vercel.json
@@ -1,4 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "npm run build"
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
+    }
+  ]
 }
