--- a/permavid-index-server/vercel.json
+++ b/permavid-index-server/vercel.json
@@ -1,15 +1,11 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    }
+  "rewrites": [
+    { "source": "/api", "destination": "/api/index" },
+    { "source": "/api/check", "destination": "/api/check" },
+    { "source": "/api/add", "destination": "/api/add" }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.js"
-    }
-  ]
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
