chore(project): update .gitignore to include build output and downloaded content; remove package-lock.json; refactor package.json scripts to use pnpm and add cleanup command

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ prompt.md
 
 # Prisma Generated Client (Index Server)
 permavid-index-server/prisma/generated/
+# Build output
+electron/dist/
+# Downloaded content
