--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dist:tauri": "pnpm build:next && pnpm build:tauri",
     "clean": "powershell -ExecutionPolicy Bypass -File ./cleanup.ps1",
     "db:init": "node scripts/db-init.js",
+    "db:init:neon": "node scripts/neon-db-init.js",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
