--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -18,6 +18,8 @@ serde_json = "1.0.108"
 serde = { version = "1.0.193", features = ["derive"] }
 tauri = { version = "1.5.3", features = [ "fs-all", "shell-open", "http-all", "dialog-all"] }
 tokio-postgres = "0.7.10"
+postgres-native-tls = "0.5.0"
+native-tls = "0.2.11"
 deadpool-postgres = "0.12.1"
 uuid = { version = "1.6.1", features = ["serde", "v4"] }
 chrono = { version = "0.4.31", features = ["serde"] }
