--- a/package.json
+++ b/package.json
@@ -25,16 +25,20 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@auth/core": "^0.40.0",
+    "@auth/nextjs": "0.0.0-380f8d56",
     "@heroicons/react": "^2.2.0",
     "@neondatabase/serverless": "^1.0.1",
     "@next/font": "^14.2.5",
     "@prisma/client": "^6.10.1",
+    "@react-oauth/google": "^0.12.2",
     "@tauri-apps/api": "^1.5.3",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "pg": "^8.16.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
