--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde_json = "1.0.108"
 serde = { version = "1.0.193", features = ["derive"] }
-tauri = { version = "1.5.3", features = [ "fs-all", "shell-open", "http-all", "dialog-all"] }
+tauri = { version = "1.5.3", features = [ "window-all", "fs-all", "shell-open", "http-all", "dialog-all"] }
 tokio-postgres = "0.7.10"
 postgres-native-tls = "0.5.0"
 native-tls = "0.2.11"
