--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "electron/dist/main.js",
   "homepage": ".",
   "scripts": {
-    "dev:next": "next dev --turbopack",
+    "dev:next": "next dev --turbopack --port 3000",
     "dev": "concurrently \"pnpm dev:next\" \"pnpm dev:electron\"",
     "dev:electron": "wait-on http://localhost:3000 && tsc electron/main.ts electron/preload.ts --outDir electron/dist --module commonjs --target es2018 --esModuleInterop && electron .",
     "dev:tauri": "tauri dev",
@@ -38,7 +38,6 @@
     "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
     "next": "15.3.1",
-    "next-auth": "^4.24.11",
     "pg": "^8.16.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
