update readme and add some commands for build, fix some errors

--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "build:electron": "tsc electron/main.ts electron/preload.ts --outDir electron/dist --module commonjs --target es2018 --esModuleInterop",
     "build": "pnpm build:next && pnpm build:electron",
     "build:tauri": "tauri build",
+    "build:prod": "pnpm build:next && pnpm build:tauri",
+    "release": "tauri build --config tauri.release.conf.json",
     "start": "next start",
     "lint": "next lint",
     "dist": "pnpm build && electron-builder",
     "dist:tauri": "pnpm build:next && pnpm build:tauri",
+    "prebuild": "echo 'Building PermaVid for production...' && pnpm install",
+    "postbuild": "echo 'Build complete! Check tauri/target/release/bundle/ for installers'",
     "clean": "powershell -ExecutionPolicy Bypass -File ./cleanup.ps1",
     "db:init": "node scripts/db-init.js",
     "db:init:neon": "node scripts/neon-db-init.js",
